# sdxutils

./: .gitignore  README.md  a.xml  cache.db  config.json.simple  devlog.md  download.py  energy_data.db  english.jsonc  gen_xl_for_app.py  index.html  login_stable.py  main.py  merge_cell.py  money-today.py  mt_discount.py  operationtest.py  ota.py  ota.sh  pyproject.toml  qt_img_test.py  release.ps1  requirements.txt  sdx-gui.spec  web.py  worktime_main.py  经验.yxyx
GUI/: SheetWorker.py  __init__.py  elec_worker.py  main.py  operation_worker.py  specialFee_worker.py
core/: core.py
douyin/: __init__.py  main.py
marketing_query/: demo.py  main.py
meituan/: __init__.py  main.py
member_info/: get_amount.py  get_cardid.py  get_consume.py  main.py
operation/: OTAUpdater.py  OperationService.py  ThirdParty.py  __init__.py  elecdata.py  main.py
schedule/: categoryids  diff_finder.py  main.py  origin_request.md
sh/: runsdx  sdx.sh
specialFee/: main.py
src/: energy_data.db
src/tools/: __init__.py  env.py  iheader.py  jwt_util.py  logger.py  login.py  pyproject.toml
src/tools/tools.egg-info/: PKG-INFO  SOURCES.txt
temp/: index.html  new.py
templates/: index.html  login.html
test/: a.py  chart_lost.py  date_value.py  delete.py  douyin_test.py  etrac_img_xl.py  mt_test.py  op_test.py  rich_text.py  richer.py  special_fee_test.py  test_fetcher.py
tools/: __init__.py  env.py  iheader.py  lib_resolve.py  logger.py  login.py  login_subdocument.html
ui/: index.html  sw.js
webui/: app.py  dashboard.html  decra.py  index.html
worktime/: get_userid.py  (+3 more)
(+38 files in other folders)
