[project]
name = "sdxutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl",
    "requests",
    "pytest",
    "Pyqt6",
    "mysql-connector-python",
    "pytz",
    "coloredlogs",
    "Pillow",
    "opencv-python"

]
