[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tools"
version = "0.1.0"
description = "My local package"
authors = [
    { name = "Ryu", email = "ryu@example.com" }
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
